# curriculum_design

./: .gitignore  README.md
C/: 课程设计报告.doc
C/SupermarketManagementSystem/: SupermarketManagementSystem.c  admin_user.c  goods.h  manage_goods.c  manage_records.c  query.c  salesman.c  statistics.c  stdafx.c  stdafx.h
C/SupermarketManagementSystem/Data/: goods_list.txt  (+1 more)
DataStructure/: 说明.txt
DataStructure/AddressList_Hash/: AddList.cpp  AddList.h  ArrayHash.cpp  ArrayHash.h  Hash.cpp  Hash.h  Main  Makefile  records.txt
JavaEE/: mycourse2_struct.sql  mycourse2_struct_data.sql
JavaEE/MyCourse/: pom.xml
OOP(C++)/: 任务书.docx  课程设计报告.docx
OOP(C++)/CMS/: CMS.cpp  Classroom.cpp  Classroom.h  Config.h  Function.cpp  stdafx.cpp  stdafx.h
OS/: DynamicAlloc.c  课程设计报告.doc
SoftwareArchitecture/: README.md
SoftwareArchitecture/linux server/: CMakeLists.txt  Makefile  config.json  main.cpp  server
SoftwareArchitecture/linux server/access/: AccessClient.cpp  AccessClient.h  ClientAccessInfo.cpp  ClientAccessInfo.h
SoftwareArchitecture/linux server/dao/: ClientInfo.h  IOnlineUserInfoDao.h  OnlineUserInfoDaoImpl.cpp  OnlineUserInfoDaoImpl.h
SoftwareArchitecture/linux server/service/: ChatroomServiceImpl.cpp  ChatroomServiceImpl.h  IChatroomService.h  ServerToClientMsg.h
SoftwareArchitecture/linux server/util/: ClientJsonMsgParser.h  SysConfig.h
SoftwareArchitecture/qt client/: chattcpsocket.cpp  chattcpsocket.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  clientjson.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_client.pro  res.qrc  serverjson.h
(+99 files in other folders)
